fixed a button overlap issue

--- a/MVC/public/assets/css/cvDropWindow.css
+++ b/MVC/public/assets/css/cvDropWindow.css
@@ -28,6 +28,7 @@
     margin-top: 80px;
     position: relative;
     padding: 20px;
+    overflow-y: auto;
 }
 
 .form_btns {
@@ -104,7 +105,7 @@
 }
 
 /* ------------------------------------------------------- */
-@media (max-width: 600px) {
+@media (max-width: 900px) {
     .drop_window {
         width: 95%;
         height: 80%;
